--- a/src/Client/Scenes/CMakeLists.txt
+++ b/src/Client/Scenes/CMakeLists.txt
@@ -1,6 +1,6 @@
-target_include_directories(spacclient PRIVATE ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(client PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 
-target_sources(spacclient PRIVATE
+target_sources(client PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/Scene.h
         ${CMAKE_CURRENT_LIST_DIR}/SceneManager.h
         ${CMAKE_CURRENT_LIST_DIR}/Menu.h
