--- a/src/Common/CMakeLists.txt
+++ b/src/Common/CMakeLists.txt
@@ -1,7 +1,3 @@
-project (spaccommon)
-
-add_library(${PROJECT_NAME} INTERFACE)
-add_library(spac::common ALIAS ${PROJECT_NAME})
-
+add_library(common INTERFACE)
 add_subdirectory(ECS)
 add_subdirectory(Net)
