--- a/src/Common/ECS/CMakeLists.txt
+++ b/src/Common/ECS/CMakeLists.txt
@@ -1,6 +1,6 @@
-target_include_directories(spaccommon INTERFACE ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(common INTERFACE ${CMAKE_CURRENT_LIST_DIR})
 
-target_sources(spaccommon
+target_sources(common
         INTERFACE
             ${CMAKE_CURRENT_LIST_DIR}/System.h
             ${CMAKE_CURRENT_LIST_DIR}/System.cpp)
