--- a/src/Common/Net/CMakeLists.txt
+++ b/src/Common/Net/CMakeLists.txt
@@ -1,5 +1,5 @@
-target_sources(spaccommon
+target_sources(common
         INTERFACE
         ${CMAKE_CURRENT_LIST_DIR}/packet_generated.h)
 
-target_include_directories(spaccommon INTERFACE ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(common INTERFACE ${CMAKE_CURRENT_LIST_DIR})
