--- a/src/Server/CMakeLists.txt
+++ b/src/Server/CMakeLists.txt
@@ -3,21 +3,13 @@ target_include_directories(server PRIVATE ${CMAKE_CURRENT_LIST_DIR}/Utilities)
 
 add_subdirectory(ECS)
 
-find_package(Threads REQUIRED)
 find_package(EnTT CONFIG REQUIRED)
 find_package(unofficial-box2d CONFIG REQUIRED)
 find_package(Flatbuffers CONFIG REQUIRED)
 find_package(Boost 1.72 REQUIRED COMPONENTS log)
-find_package(ZLIB REQUIRED)
-
-# uwebsockets
-find_path(USOCKETS_INCLUDE_DIR libusockets.h)
-find_path(UWEBSOCKETS_INCLUDE_DIR uwebsockets/App.h)
-find_library(USOCKETS_LIBRARY NAMES uSockets.lib libuSockets.a)
+find_package(OpenSSL REQUIRED)
 
 target_include_directories(server PRIVATE
-        ${USOCKETS_INCLUDE_DIR}
-        ${UWEBSOCKETS_INCLUDE_DIR}
         ${Boost_INCLUDE_DIR})
 
 target_link_libraries(server PRIVATE
@@ -26,9 +18,16 @@ target_link_libraries(server PRIVATE
         EnTT::EnTT
         unofficial::box2d::box2d
         flatbuffers::flatbuffers
-        ${USOCKETS_LIBRARY}
-        ZLIB::ZLIB
+        OpenSSL::SSL
+        OpenSSL::Crypto
         ${Boost_LIBRARIES})
+
+target_compile_options(server PRIVATE
+        $<$<CXX_COMPILER_ID:MSVC>:/bigobj>)
+
+if(WIN32)
+    target_link_libraries(server PRIVATE crypt32)
+endif()
 
 configure_file(${CMAKE_CURRENT_LIST_DIR}/../../certs/key.pem ${CMAKE_CURRENT_BINARY_DIR}/certs/key.pem COPYONLY)
 configure_file(${CMAKE_CURRENT_LIST_DIR}/../../certs/cert.pem ${CMAKE_CURRENT_BINARY_DIR}/certs/cert.pem COPYONLY)
