--- a/src/Client/Networking/CMakeLists.txt
+++ b/src/Client/Networking/CMakeLists.txt
@@ -1,5 +1,5 @@
 target_include_directories(client PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 
 target_sources(client PRIVATE
-        ${CMAKE_CURRENT_LIST_DIR}/Client.h
-        ${CMAKE_CURRENT_LIST_DIR}/Client.cpp)
+        ${CMAKE_CURRENT_LIST_DIR}/WebsocketClient.h
+        ${CMAKE_CURRENT_LIST_DIR}/WebsocketClient.cpp)
