Lots of refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
-project(spac2 VERSION 1.0.0 LANGUAGES CXX)
+project(spac VERSION 1.0.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(src/Common)
+add_subdirectory(src/Common/Networking)
+add_subdirectory(src/Common/ECS)
 add_subdirectory(src/Server)
 add_subdirectory(src/Client)
