--- a/src/Common/Networking/CMakeLists.txt
+++ b/src/Common/Networking/CMakeLists.txt
@@ -1,6 +1,6 @@
-project(ecs)
+project(networking)
 
 add_library(${PROJECT_NAME} INTERFACE)
-add_library(spac::ecs ALIAS ${PROJECT_NAME})
+add_library(spac::networking ALIAS ${PROJECT_NAME})
 
 target_include_directories(${PROJECT_NAME} INTERFACE ${PROJECT_SOURCE_DIR}/include)
