--- a/src/Client/CMakeLists.txt
+++ b/src/Client/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable(client main.cpp)
+project(client)
+
+add_executable(${PROJECT_NAME} main.cpp)
+add_executable(spac::client ALIAS ${PROJECT_NAME})
 
 add_subdirectory(ECS)
 add_subdirectory(Scenes)
@@ -7,7 +10,7 @@ add_subdirectory(Networking)
 find_package(EnTT CONFIG REQUIRED)
 find_package(glfw3 CONFIG REQUIRED)
 find_package(raylib CONFIG REQUIRED)
-find_package(Boost 1.72 REQUIRED COMPONENTS system thread log REQUIRED)
+find_package(Boost 1.73 REQUIRED COMPONENTS system thread log REQUIRED)
 find_package(OpenSSL REQUIRED)
 
 target_compile_options(client
@@ -23,7 +26,8 @@ target_include_directories(client PRIVATE
 target_sources(client PRIVATE ${CMAKE_CURRENT_LIST_DIR}/GameLoop.h ${CMAKE_CURRENT_LIST_DIR}/GameLoop.cpp)
 
 target_link_libraries(client PRIVATE
-        common
+        spac::networking
+        spac::ecs
         OpenSSL::SSL
         OpenSSL::Crypto
         ${raylib_LIBRARIES}
