--- a/src/Client/Networking/CMakeLists.txt
+++ b/src/Client/Networking/CMakeLists.txt
@@ -2,4 +2,6 @@ target_include_directories(client PRIVATE ${CMAKE_CURRENT_LIST_DIR})
 
 target_sources(client PRIVATE
         ${CMAKE_CURRENT_LIST_DIR}/WebsocketClient.h
-        ${CMAKE_CURRENT_LIST_DIR}/WebsocketClient.cpp)
+        ${CMAKE_CURRENT_LIST_DIR}/WebsocketClient.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/ConnectionManager.h
+        ${CMAKE_CURRENT_LIST_DIR}/ConnectionManager.cpp)
